<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/nav_bookmarks"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/bookmarks" />
    <item
        android:id="@+id/nav_export_bookmarks"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/export_bookmarks" />
    <item
        android:id="@+id/nav_import_bookmarks"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/import_bookmarks" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>